# Advent-of-code

./: .gitignore  AdventOfCode.cabal  Dockerfile  Main.hs  README.md  _config.yml  aoc.py  build_day.sh
2021/: README.md
2022/: .gitignore  README.md  test.py
2022/Day01/: Day01.hs  Day01.py  Day01.sh
2022/Day02/: Day02.hs  shortinput.txt  shortinput1.txt
2022/Day03/: Day03.hs  shortinput1.txt
2022/Day04/: Day04.hs
2022/Day05/: Day05.hs  input.txt
2022/Day06/: Day06.hs  shortinput.txt
2022/Day07/: Day07.hs  Day07.py
2022/Day08/: Day08.hs  Day08.py
2022/Day09/: Day09.hs
2022/Day10/: Day10.hs
2022/Day11/: Day11.hs  input.txt  raph.hs
2022/Day12/: Day12.hs
2022/Day13/: Day13.hs
2022/Day14/: Day14.hs
2022/Day15/: Day15.hs
2022/Day16/: Day16.hs
2022/Day17/: Day17.hs  input.txt
2022/Day18/: Day18.hs
2022/Day19/: Day19.hs  input.txt
2022/Day20/: Day20.hs
2022/Day21/: Day21.hs
2022/Day22/: Day22.hs  input.txt
2022/Day23/: Day23.hs
2022/Day24/: Day24.hs
2022/Day25/: Day25.hs
2022/test/: test.hs
2023/: README.md
2023/Day01/: Day01.hs
2023/Day02/: Day02.hs
2023/Day03/: Day03.hs
2023/Day04/: Day04.hs  improved.hs  input.txt
2023/Day05/: Day05.hs
2023/Day06/: Day06.hs
2023/Day07/: Day07.hs  input.txt  shortinput.txt
2023/Day08/: Day08.hs  tograph.sh
2023/Day09/: Day09.hs
2023/Day10/: Day10.hs  cleanedprettyinput.txt  input.txt  prettyinput.txt  shortinput3.txt
2023/Day11/: Day11.hs
2023/Day12/: Day12.hs
2023/Day13/: Day13.hs  input.txt
2023/Day14/: Day14.hs
2023/Day15/: Day15.hs
2023/Day16/: Day16.hs  input.txt  shortinput2.txt
2023/Day17/: Day17.hs  input.txt
2023/Day18/: Day18.hs
2023/Day19/: Day19.hs
2023/Day20/: Day20.hs  input.txt  input_graph.txt  tograph.sh
2023/Day21/: Day21.hs
2023/Day22/: Day22.hs
2023/Day23/: Day23.hs
2023/Day24/: Day24.hs
2023/Day25/: Day25.hs  input.txt  tograph.sh
2024/: .gitignore  README.md
2024/Day01/: Day01.hs
2024/Day02/: Day02.hs  input.txt
2024/Day03/: Day03.hs
2024/Day04/: Day04.hs
2024/Day05/: Day05.hs
2024/Day06/: Day06.hs  Makefile  input.txt
2024/Day07/: Day07.hs  Makefile  input.txt
2024/Day08/: Day08.hs  Makefile  (+1 more)
2025/: .gitignore  AOC2025.hs  README.md
haskell/: Main.cabal  Main.hs
haskell/AOC/: Cli.hs
haskell/commons/: AOC.hs
haskell/commons/AOC/: Image.hs  Runtime.hs  Utils.hs
(+157 files in other folders)
